@@ -15,48 +15,51 @@
  */
 package org.gradle.integtests.fixtures.executer;
 
+import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
+import com.google.common.io.ByteStreams;
 import com.google.common.io.CharSource;
 import groovy.lang.Closure;
 import groovy.lang.DelegatesTo;
 import org.gradle.api.Action;
 import org.gradle.api.JavaVersion;
-import org.gradle.api.Transformer;
 import org.gradle.api.UncheckedIOException;
-import org.gradle.api.internal.ClosureBackedAction;
+import org.gradle.api.internal.artifacts.ivyservice.ArtifactCachesProvider;
 import org.gradle.api.internal.initialization.DefaultClassLoaderScope;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
 import org.gradle.api.logging.configuration.ConsoleOutput;
 import org.gradle.api.logging.configuration.WarningMode;
-import org.gradle.initialization.BuildLayoutParameters;
+import org.gradle.integtests.fixtures.RepoScriptBlockUtil;
 import org.gradle.integtests.fixtures.daemon.DaemonLogsAnalyzer;
 import org.gradle.internal.ImmutableActionSet;
 import org.gradle.internal.MutableActionSet;
 import org.gradle.internal.UncheckedException;
 import org.gradle.internal.featurelifecycle.LoggingDeprecatedFeatureHandler;
 import org.gradle.internal.jvm.Jvm;
-import org.gradle.internal.jvm.UnsupportedJavaRuntimeException;
+import org.gradle.internal.jvm.inspection.JvmVersionDetector;
 import org.gradle.internal.logging.LoggingManagerInternal;
 import org.gradle.internal.logging.services.DefaultLoggingManagerFactory;
 import org.gradle.internal.logging.services.LoggingServiceRegistry;
-import org.gradle.internal.logging.sink.ConsoleStateUtil;
-import org.gradle.internal.logging.sink.OutputEventRenderer;
+import org.gradle.internal.nativeintegration.console.TestOverrideConsoleDetector;
 import org.gradle.internal.nativeintegration.services.NativeServices;
 import org.gradle.internal.service.ServiceRegistry;
 import org.gradle.internal.service.ServiceRegistryBuilder;
 import org.gradle.internal.service.scopes.GlobalScopeServices;
-import org.gradle.internal.time.Clock;
+import org.gradle.launcher.cli.DefaultCommandLineActionFactory;
 import org.gradle.launcher.daemon.configuration.DaemonBuildOptions;
 import org.gradle.process.internal.streams.SafeStreams;
+import org.gradle.test.fixtures.ResettableExpectations;
 import org.gradle.test.fixtures.file.TestDirectoryProvider;
 import org.gradle.test.fixtures.file.TestFile;
 import org.gradle.testfixtures.internal.NativeServicesTestFixture;
+import org.gradle.util.ClosureBackedAction;
 import org.gradle.util.CollectionUtils;
-import org.gradle.util.GUtil;
+import org.gradle.util.GFileUtils;
 import org.gradle.util.GradleVersion;
 
 import java.io.File;
@@ -65,7 +68,9 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.PipedInputStream;
 import java.io.PipedOutputStream;
+import java.net.URL;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -74,46 +79,47 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Properties;
 import java.util.Set;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
-import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.*;
+import static java.util.stream.Collectors.joining;
+import static org.gradle.api.internal.artifacts.BaseRepositoryFactory.PLUGIN_PORTAL_OVERRIDE_URL_PROPERTY;
+import static org.gradle.integtests.fixtures.RepoScriptBlockUtil.gradlePluginRepositoryMirrorUrl;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.DAEMON;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.FOREGROUND;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.NOT_DEFINED;
+import static org.gradle.integtests.fixtures.executer.AbstractGradleExecuter.CliDaemonArgument.NO_DAEMON;
 import static org.gradle.integtests.fixtures.executer.OutputScrapingExecutionResult.STACK_TRACE_ELEMENT;
 import static org.gradle.internal.service.scopes.DefaultGradleUserHomeScopeServiceRegistry.REUSE_USER_HOME_SERVICES;
 import static org.gradle.util.CollectionUtils.collect;
 import static org.gradle.util.CollectionUtils.join;
 
-public abstract class AbstractGradleExecuter implements GradleExecuter {
+public abstract class AbstractGradleExecuter implements GradleExecuter, ResettableExpectations {
+
     protected static final ServiceRegistry GLOBAL_SERVICES = ServiceRegistryBuilder.builder()
         .displayName("Global services")
         .parent(newCommandLineProcessLogging())
         .parent(NativeServicesTestFixture.getInstance())
         .provider(new GlobalScopeServices(true))
         .build();
-    protected final static Set<String> PROPAGATED_SYSTEM_PROPERTIES = Sets.newHashSet();
-    private static final List<String> JDK7_PATHS = Arrays.asList("1.7", "jdk7", "-7-", "jdk-7", "7u");
 
+    private static final JvmVersionDetector JVM_VERSION_DETECTOR = GLOBAL_SERVICES.get(JvmVersionDetector.class);
+
+    protected final static Set<String> PROPAGATED_SYSTEM_PROPERTIES = Sets.newHashSet();
+
+    // TODO - don't use statics to communicate between the test runner and executer
     public static void propagateSystemProperty(String name) {
         PROPAGATED_SYSTEM_PROPERTIES.add(name);
+    }
+
+    public static void doNotPropagateSystemProperty(String name) {
+        PROPAGATED_SYSTEM_PROPERTIES.remove(name);
     }
 
     private static final String DEBUG_SYSPROP = "org.gradle.integtest.debug";
     private static final String LAUNCHER_DEBUG_SYSPROP = "org.gradle.integtest.launcher.debug";
     private static final String PROFILE_SYSPROP = "org.gradle.integtest.profile";
-
-    private static final List<String> LOW_LEVELS = Arrays.asList(
-        "--info",
-        "--debug",
-        "--warn",
-        "-Dorg.gradle.logging.level=lifecycle",
-        "-Dorg.gradle.logging.level=info",
-        "-Dorg.gradle.logging.level=debug",
-        "-Dorg.gradle.logging.level=warn");
-
-    private static final List<String> HIGH_LEVELS = Arrays.asList(
-        "-q",
-        "--quiet",
-        "-Dorg.gradle.logging.level=quiet");
 
     protected static final List<String> DEBUG_ARGS = ImmutableList.of(
         "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"
@@ -123,18 +129,20 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     protected final IntegrationTestBuildContext buildContext;
 
-    private final Set<File> isolatedDaemonBaseDirs = new HashSet<File>();
-    private final Set<GradleHandle> running = new HashSet<GradleHandle>();
-    private final List<String> args = new ArrayList<String>();
-    private final List<String> tasks = new ArrayList<String>();
+    private final Set<File> isolatedDaemonBaseDirs = new HashSet<>();
+    private final Set<File> daemonCrashLogsBeforeTest;
+    private final Set<GradleHandle> running = new HashSet<>();
+    private final List<ExecutionResult> results = new ArrayList<>();
+    private final List<String> args = new ArrayList<>();
+    private final List<String> tasks = new ArrayList<>();
     private boolean allowExtraLogging = true;
+    protected ConsoleAttachment consoleAttachment = ConsoleAttachment.NOT_ATTACHED;
     private File workingDir;
     private boolean quiet;
     private boolean taskList;
     private boolean dependencyList;
-    private boolean searchUpwards;
-    private Map<String, String> environmentVars = new HashMap<String, String>();
-    private List<File> initScripts = new ArrayList<File>();
+    private final Map<String, String> environmentVars = new HashMap<>();
+    private final List<File> initScripts = new ArrayList<>();
     private String executable;
     private TestFile gradleUserHomeDir;
     private File userHomeDir;
@@ -142,26 +150,29 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     private File buildScript;
     private File projectDir;
     private File settingsFile;
+    private boolean ignoreMissingSettingsFile;
+    private boolean ignoreCleanupAssertions;
     private PipedOutputStream stdinPipe;
     private String defaultCharacterEncoding;
     private Locale defaultLocale;
     private int daemonIdleTimeoutSecs = 120;
     private boolean requireDaemon;
     private File daemonBaseDir;
-    private final List<String> buildJvmOpts = new ArrayList<String>();
-    private final List<String> commandLineJvmOpts = new ArrayList<String>();
+    private final List<String> buildJvmOpts = new ArrayList<>();
+    private final List<String> commandLineJvmOpts = new ArrayList<>();
     private boolean useOnlyRequestedJvmOpts;
-    private boolean requiresGradleDistribution;
     private boolean useOwnUserHomeServices;
     private ConsoleOutput consoleType;
     protected WarningMode warningMode = WarningMode.All;
     private boolean showStacktrace = true;
+    private boolean renderWelcomeMessage;
 
-    private int expectedDeprecationWarnings;
+    private int expectedGenericDeprecationWarnings;
+    private final List<String> expectedDeprecationWarnings = new ArrayList<>();
     private boolean eagerClassLoaderCreationChecksOn = true;
     private boolean stackTraceChecksOn = true;
 
-    private final MutableActionSet<GradleExecuter> beforeExecute = new MutableActionSet<GradleExecuter>();
+    private final MutableActionSet<GradleExecuter> beforeExecute = new MutableActionSet<>();
     private ImmutableActionSet<GradleExecuter> afterExecute = ImmutableActionSet.empty();
 
     private final TestDirectoryProvider testDirectoryProvider;
@@ -178,6 +189,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     protected boolean noExplicitNativeServicesDir;
     private boolean fullDeprecationStackTrace = true;
     private boolean checkDeprecations = true;
+    private boolean checkDaemonCrash = true;
 
     private TestFile tmpDir;
     private DurationMeasurement durationMeasurement;
@@ -194,10 +206,11 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         this.distribution = distribution;
         this.testDirectoryProvider = testDirectoryProvider;
         this.gradleVersion = gradleVersion;
-        logger = Logging.getLogger(getClass());
+        this.logger = Logging.getLogger(getClass());
         this.buildContext = buildContext;
-        gradleUserHomeDir = buildContext.getGradleUserHomeDir();
-        daemonBaseDir = buildContext.getDaemonBaseDir();
+        this.gradleUserHomeDir = buildContext.getGradleUserHomeDir();
+        this.daemonBaseDir = buildContext.getDaemonBaseDir();
+        this.daemonCrashLogsBeforeTest = ImmutableSet.copyOf(DaemonLogsAnalyzer.findCrashLogs(daemonBaseDir));
     }
 
     protected Logger getLogger() {
@@ -213,10 +226,12 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         projectDir = null;
         buildScript = null;
         settingsFile = null;
+        ignoreMissingSettingsFile = false;
+        // ignoreCleanupAssertions is intentionally sticky
+        // ignoreCleanupAssertions = false;
         quiet = false;
         taskList = false;
         dependencyList = false;
-        searchUpwards = false;
         executable = null;
         javaHome = null;
         environmentVars.clear();
@@ -226,8 +241,10 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         commandLineJvmOpts.clear();
         buildJvmOpts.clear();
         useOnlyRequestedJvmOpts = false;
-        expectedDeprecationWarnings = 0;
+        expectedGenericDeprecationWarnings = 0;
+        expectedDeprecationWarnings.clear();
         stackTraceChecksOn = true;
+        renderWelcomeMessage = false;
         debug = Boolean.getBoolean(DEBUG_SYSPROP);
         debugLauncher = Boolean.getBoolean(LAUNCHER_DEBUG_SYSPROP);
         profiler = System.getProperty(PROFILE_SYSPROP, "");
@@ -256,7 +273,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     @Override
     public void beforeExecute(@DelegatesTo(GradleExecuter.class) Closure action) {
-        beforeExecute.add(new ClosureBackedAction<GradleExecuter>(action));
+        beforeExecute.add(new ClosureBackedAction<>(action));
     }
 
     @Override
@@ -266,7 +283,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     @Override
     public void afterExecute(@DelegatesTo(GradleExecuter.class) Closure action) {
-        afterExecute(new ClosureBackedAction<GradleExecuter>(action));
+        afterExecute(new ClosureBackedAction<>(action));
     }
 
     @Override
@@ -296,6 +313,12 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
         if (settingsFile != null) {
             executer.usingSettingsFile(settingsFile);
+        }
+        if (ignoreMissingSettingsFile) {
+            executer.ignoreMissingSettingsFile();
+        }
+        if (ignoreCleanupAssertions) {
+            executer.ignoreCleanupAssertions();
         }
         if (javaHome != null) {
             executer.withJavaHome(javaHome);
@@ -347,17 +370,15 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
         executer.noExtraLogging();
 
-        if (expectedDeprecationWarnings > 0) {
-            executer.expectDeprecationWarnings(expectedDeprecationWarnings);
+        if (expectedGenericDeprecationWarnings > 0) {
+            executer.expectDeprecationWarnings(expectedGenericDeprecationWarnings);
         }
+        expectedDeprecationWarnings.forEach(executer::expectDeprecationWarning);
         if (!eagerClassLoaderCreationChecksOn) {
             executer.withEagerClassLoaderCreationCheckDisabled();
         }
         if (!stackTraceChecksOn) {
             executer.withStackTraceChecksDisabled();
-        }
-        if (requiresGradleDistribution) {
-            executer.requireGradleDistribution();
         }
         if (useOwnUserHomeServices) {
             executer.withOwnUserHomeServices();
@@ -365,8 +386,8 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         if (requireDaemon) {
             executer.requireDaemon();
         }
-        if (searchUpwards) {
-            executer.withSearchUpwards();
+        if (!checkDaemonCrash) {
+            executer.noDaemonCrashChecks();
         }
 
         executer.startBuildProcessInDebugger(debug);
@@ -391,6 +412,13 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         if (!showStacktrace) {
             executer.withStacktraceDisabled();
         }
+
+        if (renderWelcomeMessage) {
+            executer.withWelcomeMessageEnabled();
+        }
+
+        executer.withTestConsoleAttached(consoleAttachment);
+
         return executer;
     }
 
@@ -443,10 +471,10 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
         GradleInvocation gradleInvocation = new GradleInvocation();
         gradleInvocation.environmentVars.putAll(environmentVars);
-        gradleInvocation.buildJvmArgs.addAll(buildJvmOpts);
         if (!useOnlyRequestedJvmOpts) {
             gradleInvocation.buildJvmArgs.addAll(getImplicitBuildJvmArgs());
         }
+        gradleInvocation.buildJvmArgs.addAll(buildJvmOpts);
         calculateLauncherJvmArgs(gradleInvocation);
         gradleInvocation.args.addAll(getAllArgs());
 
@@ -482,11 +510,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
         if (isUseDaemon() && !gradleInvocation.buildJvmArgs.isEmpty()) {
             // Pass build JVM args through to daemon via system property on the launcher JVM
-            String quotedArgs = join(" ", collect(gradleInvocation.buildJvmArgs, new Transformer<String, String>() {
-                public String transform(String input) {
-                    return String.format("'%s'", input);
-                }
-            }));
+            String quotedArgs = join(" ", collect(gradleInvocation.buildJvmArgs, input -> String.format("'%s'", input)));
             gradleInvocation.implicitLauncherJvmArgs.add("-Dorg.gradle.jvmargs=" + quotedArgs);
         } else {
             // Have to pass build JVM args directly to launcher JVM
@@ -510,7 +534,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
      * Returns additional JVM args that should be used to start the build JVM.
      */
     protected List<String> getImplicitBuildJvmArgs() {
-        List<String> buildJvmOpts = new ArrayList<String>();
+        List<String> buildJvmOpts = new ArrayList<>();
         buildJvmOpts.add("-ea");
 
         if (isDebug()) {
@@ -519,7 +543,32 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         if (isProfile()) {
             buildJvmOpts.add(profiler);
         }
+
+        if (isSharedDaemons()) {
+            buildJvmOpts.add("-Xms256m");
+            buildJvmOpts.add("-Xmx1024m");
+        } else {
+            buildJvmOpts.add("-Xms256m");
+            buildJvmOpts.add("-Xmx512m");
+        }
+        if (JVM_VERSION_DETECTOR.getJavaVersion(Jvm.forHome(getJavaHome())).compareTo(JavaVersion.VERSION_1_8) < 0) {
+            // Although Gradle isn't supported on earlier versions, some tests do run it using Java 6 and 7 to verify it behaves well in this case
+            buildJvmOpts.add("-XX:MaxPermSize=320m");
+        } else {
+            buildJvmOpts.add("-XX:MaxMetaspaceSize=512m");
+        }
+        buildJvmOpts.add("-XX:+HeapDumpOnOutOfMemoryError");
+        buildJvmOpts.add("-XX:HeapDumpPath=" + buildContext.getGradleUserHomeDir());
         return buildJvmOpts;
+    }
+
+    private boolean xmxSpecified() {
+        for (String arg : buildJvmOpts) {
+            if (arg.startsWith("-Xmx")) {
+                return true;
+            }
+        }
+        return false;
     }
 
     @Override
@@ -589,12 +638,6 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     public Locale getDefaultLocale() {
         return defaultLocale;
-    }
-
-    @Override
-    public GradleExecuter withSearchUpwards() {
-        searchUpwards = true;
-        return this;
     }
 
     public boolean isQuiet() {
@@ -696,13 +739,24 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     @Override
+    public GradleExecuter withReadOnlyCacheDir(File cacheDir) {
+        return withReadOnlyCacheDir(cacheDir.getAbsolutePath());
+    }
+
+    @Override
+    public GradleExecuter withReadOnlyCacheDir(String cacheDir) {
+        environmentVars.put(ArtifactCachesProvider.READONLY_CACHE_ENV_VAR, cacheDir);
+        return this;
+    }
+
+    @Override
     public GradleExecuter requireIsolatedDaemons() {
         return withDaemonBaseDir(testDirectoryProvider.getTestDirectory().file("daemon"));
     }
 
     @Override
     public GradleExecuter withWorkerDaemonsExpirationDisabled() {
-        return withArgument("-Dorg.gradle.workers.internal.disable-daemons-expiration=true");
+        return withCommandLineGradleOpts("-Dorg.gradle.workers.internal.disable-daemons-expiration=true");
     }
 
     @Override
@@ -728,7 +782,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     @Override
     public boolean isUseDaemon() {
         CliDaemonArgument cliDaemonArgument = resolveCliDaemonArgument();
-        if (cliDaemonArgument == NO_DAEMON) {
+        if (cliDaemonArgument == NO_DAEMON || cliDaemonArgument == FOREGROUND) {
             return false;
         }
         return requireDaemon || cliDaemonArgument == DAEMON;
@@ -752,9 +806,49 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         return this;
     }
 
+    @Override
     public GradleExecuter withStacktraceDisabled() {
         showStacktrace = false;
         return this;
+    }
+
+    @Override
+    public GradleExecuter withWelcomeMessageEnabled() {
+        renderWelcomeMessage = true;
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withRepositoryMirrors() {
+        beforeExecute(gradleExecuter -> usingInitScript(RepoScriptBlockUtil.createMirrorInitScript()));
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withGlobalRepositoryMirrors() {
+        beforeExecute(gradleExecuter -> {
+            TestFile userHome = testDirectoryProvider.getTestDirectory().file("user-home");
+            withGradleUserHomeDir(userHome);
+            userHome.file("init.d/mirrors.gradle").write(RepoScriptBlockUtil.mirrorInitScript());
+        });
+        return this;
+    }
+
+    @Override
+    public GradleExecuter withPluginRepositoryMirror() {
+        beforeExecute(gradleExecuter -> withArgument("-D" + PLUGIN_PORTAL_OVERRIDE_URL_PROPERTY + "=" + gradlePluginRepositoryMirrorUrl()));
+        return this;
+    }
+
+    @Override
+    public GradleExecuter ignoreCleanupAssertions() {
+        this.ignoreCleanupAssertions = true;
+        return this;
+    }
+
+    @Override
+    public void resetExpectations() {
+        cleanup();
     }
 
     /**
@@ -763,6 +857,8 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     public void cleanup() {
         stopRunningBuilds();
         cleanupIsolatedDaemons();
+        checkForDaemonCrashesInSharedLocations();
+        assertVisitedExecutionResults();
     }
 
     private void stopRunningBuilds() {
@@ -776,11 +872,45 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     private void cleanupIsolatedDaemons() {
-        for (File baseDir : isolatedDaemonBaseDirs) {
+        List<DaemonLogsAnalyzer> analyzers = new ArrayList<>();
+        for (File dir : isolatedDaemonBaseDirs) {
             try {
-                new DaemonLogsAnalyzer(baseDir, gradleVersion.getVersion()).killAll();
+                DaemonLogsAnalyzer analyzer = new DaemonLogsAnalyzer(dir, gradleVersion.getVersion());
+                analyzers.add(analyzer);
+                analyzer.killAll();
             } catch (Exception e) {
-                getLogger().warn("Problem killing isolated daemons of Gradle version " + gradleVersion + " in " + baseDir, e);
+                getLogger().warn("Problem killing isolated daemons of Gradle version " + gradleVersion + " in " + dir, e);
+            }
+        }
+
+        if (checkDaemonCrash) {
+            analyzers.forEach(DaemonLogsAnalyzer::assertNoCrashedDaemon);
+        }
+    }
+
+    private void checkForDaemonCrashesInSharedLocations() {
+        checkForDaemonCrashes(getWorkingDir(), it -> true);
+        checkForDaemonCrashes(buildContext.getDaemonBaseDir(), crashLog -> !daemonCrashLogsBeforeTest.contains(crashLog));
+    }
+
+    private void checkForDaemonCrashes(File dirToSearch, Predicate<File> crashLogFilter) {
+        if (checkDaemonCrash) {
+            List<File> crashLogs = DaemonLogsAnalyzer.findCrashLogs(dirToSearch).stream()
+                .filter(crashLogFilter)
+                .collect(Collectors.toList());
+            if (!crashLogs.isEmpty()) {
+                throw new AssertionError(String.format(
+                    "Found crash logs: '%s'",
+                    crashLogs.stream().map(File::getAbsolutePath).collect(joining("', '"))
+                ));
+            }
+        }
+    }
+
+    private void assertVisitedExecutionResults() {
+        if (!ignoreCleanupAssertions) {
+            for (ExecutionResult result : results) {
+                result.assertResultVisited();
             }
         }
     }
@@ -792,7 +922,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         FOREGROUND
     }
 
-    private CliDaemonArgument resolveCliDaemonArgument() {
+    protected CliDaemonArgument resolveCliDaemonArgument() {
         for (int i = args.size() - 1; i >= 0; i--) {
             final String arg = args.get(i);
             if (arg.equals("--daemon")) {
@@ -813,7 +943,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     protected List<String> getAllArgs() {
-        List<String> allArgs = new ArrayList<String>();
+        List<String> allArgs = new ArrayList<>();
         if (buildScript != null) {
             allArgs.add("--build-file");
             allArgs.add(buildScript.getAbsolutePath());
@@ -850,18 +980,10 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
             allArgs.add("dependencies");
         }
 
-        if (!searchUpwards) {
-            // needed for cross-version tests with older versions
-            if (!isSettingsFileAvailable() && distribution.getVersion().getBaseVersion().compareTo(GradleVersion.version("4.5")) < 0) {
-                allArgs.add("--no-search-upward");
-            }
+        if (settingsFile == null && !ignoreMissingSettingsFile) {
+            ensureSettingsFileAvailable();
         }
 
-        // This will cause problems on Windows if the path to the Gradle executable that is used has a space in it (e.g. the user's dir is c:/Users/Luke Daley/)
-        // This is fundamentally a windows issue: You can't have arguments with spaces in them if the path to the batch script has a space
-        // We could work around this by setting -Dgradle.user.home but GRADLE-1730 (which affects 1.0-milestone-3) means that that
-        // is problematic as well. For now, we just don't support running the int tests from a path with a space in it on Windows.
-        // When we stop testing against M3 we should change to use the system property.
         if (getGradleUserHomeDir() != null) {
             allArgs.add("--gradle-user-home");
             allArgs.add(getGradleUserHomeDir().getAbsolutePath());
@@ -880,24 +1002,36 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         return allArgs;
     }
 
-    private boolean isSettingsFileAvailable() {
-        boolean settingsFoundAboveInTestDir = false;
-        TestFile dir = new TestFile(getWorkingDir());
+    @Override
+    public GradleExecuter ignoreMissingSettingsFile() {
+        ignoreMissingSettingsFile = true;
+        return this;
+    }
+
+    private void ensureSettingsFileAvailable() {
+        TestFile workingDir = new TestFile(getWorkingDir());
+        TestFile dir = workingDir;
         while (dir != null && getTestDirectoryProvider().getTestDirectory().isSelfOrDescendent(dir)) {
-            if (dir.file("settings.gradle").isFile()) {
-                settingsFoundAboveInTestDir = true;
-                break;
+            if (hasSettingsFile(dir) || hasSettingsFile(dir.file("master"))) {
+                return;
             }
             dir = dir.getParentFile();
         }
-        return settingsFoundAboveInTestDir;
+        workingDir.createFile("settings.gradle");
+    }
+
+    private boolean hasSettingsFile(TestFile dir) {
+        if (dir.isDirectory()) {
+            return dir.file("settings.gradle").isFile() || dir.file("settings.gradle.kts").isFile();
+        }
+        return false;
     }
 
     /**
      * Returns the set of system properties that should be set on every JVM used by this executer.
      */
     protected Map<String, String> getImplicitJvmSystemProperties() {
-        Map<String, String> properties = new LinkedHashMap<String, String>();
+        Map<String, String> properties = new LinkedHashMap<>();
 
         if (getUserHomeDir() != null) {
             properties.put("user.home", getUserHomeDir().getAbsolutePath());
@@ -910,7 +1044,8 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
         properties.put(LoggingDeprecatedFeatureHandler.ORG_GRADLE_DEPRECATION_TRACE_PROPERTY_NAME, Boolean.toString(fullDeprecationStackTrace));
 
-        if (useOwnUserHomeServices || (gradleUserHomeDir != null && !gradleUserHomeDir.equals(buildContext.getGradleUserHomeDir()))) {
+        boolean useCustomGradleUserHomeDir = gradleUserHomeDir != null && !gradleUserHomeDir.equals(buildContext.getGradleUserHomeDir());
+        if (useOwnUserHomeServices || useCustomGradleUserHomeDir) {
             properties.put(REUSE_USER_HOME_SERVICES, "false");
         }
         if (!noExplicitTmpDir) {
@@ -936,14 +1071,10 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
 
         if (interactive) {
-            properties.put(ConsoleStateUtil.INTERACTIVE_TOGGLE, "true");
+            properties.put(TestOverrideConsoleDetector.INTERACTIVE_TOGGLE, "true");
         }
 
-        if (!searchUpwards) {
-            if (!isSettingsFileAvailable()) {
-                properties.put(BuildLayoutParameters.NO_SEARCH_UPWARDS_PROPERTY_KEY, "true");
-            }
-        }
+        properties.put(DefaultCommandLineActionFactory.WELCOME_MESSAGE_ENABLED_SYSTEM_PROPERTY, Boolean.toString(renderWelcomeMessage));
 
         return properties;
     }
@@ -955,17 +1086,11 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     @Override
     public final GradleHandle start() {
         assert afterExecute.isEmpty() : "afterExecute actions are not implemented for async execution";
-        return startHandle();
-    }
-
-    protected GradleHandle startHandle() {
-        fireBeforeExecute();
-        assertCanExecute();
-        collectStateBeforeExecution();
+        beforeBuildSetup();
         try {
             GradleHandle handle = createGradleHandle();
             running.add(handle);
-            return handle;
+            return new ResultCollectingHandle(handle);
         } finally {
             reset();
         }
@@ -973,81 +1098,33 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     @Override
     public final ExecutionResult run() {
-        fireBeforeExecute();
-        assertCanExecute();
-        collectStateBeforeExecution();
+        beforeBuildSetup();
         try {
-            return doRun();
+            ExecutionResult result = doRun();
+            if (errorsShouldAppearOnStdout()) {
+                result = new ErrorsOnStdoutScrapingExecutionResult(result);
+            }
+            afterBuildCleanup(result);
+            return result;
         } finally {
             finished();
         }
     }
 
-    private boolean java7DeprecationWarningShouldExist() {
-        if (org.apache.commons.collections.CollectionUtils.containsAny(args, LOW_LEVELS)) {
-            return currentOrTargetIsJava7();
-        }
-        if (org.apache.commons.collections.CollectionUtils.containsAny(args, HIGH_LEVELS)) {
-            return false;
-        }
-        return currentOrTargetIsJava7();
-    }
-
-    private boolean currentOrTargetIsJava7() {
-        String javaHomeInProperties = javaHomeInProperties();
-        if (javaHomeInProperties != null) {
-            return isJava7Home(javaHomeInProperties);
-        } else if (getJavaHome().equals(Jvm.current().getJavaHome())) {
-            return JavaVersion.current().isJava7();
-        } else {
-            return isJava7Home(getJavaHome().toString());
-        }
-    }
-
-    private String javaHomeInProperties() {
-        File gradleProperties = new File(getWorkingDir(), "gradle.properties");
-        if (gradleProperties.isFile()) {
-            Properties properties = GUtil.loadProperties(gradleProperties);
-            if (properties.getProperty("org.gradle.java.home") != null) {
-                return properties.getProperty("org.gradle.java.home");
-            }
-        }
-        return null;
-    }
-
-    private boolean isJava7Home(String path) {
-        for (String jdk7Path : JDK7_PATHS) {
-            if (path.contains(jdk7Path)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private boolean isJava7DeprecationTruncatedDaemonLog(List<String> lines, int i, String line) {
-        // for forkingIntegrationTests running on Java 7, daemon exit log will fail the tests with following stdout:
-        // ----- Last  20 lines from daemon log file - daemon-6753.out.log -----
-        //    at org.gradle.launcher.daemon.server.exec.ForwardClientInput.execute(ForwardClientInput.java:72)
-        //    at org.gradle.launcher.daemon.server.api.DaemonCommandExecution.proceed(DaemonCommandExecution.java:120)
-        //    ...
-        return line.startsWith("----- Last  ") && i < lines.size() - 1 && STACK_TRACE_ELEMENT.matcher(lines.get(i + 1)).matches();
-    }
-
     protected void finished() {
-        try {
-            afterExecute.execute(this);
-        } finally {
-            reset();
-        }
+        reset();
     }
 
     @Override
     public final ExecutionFailure runWithFailure() {
-        fireBeforeExecute();
-        assertCanExecute();
-        collectStateBeforeExecution();
+        beforeBuildSetup();
         try {
-            return doRunWithFailure();
+            ExecutionFailure executionFailure = doRunWithFailure();
+            if (errorsShouldAppearOnStdout()) {
+                executionFailure = new ErrorsOnStdoutScrapingExecutionFailure(executionFailure);
+            }
+            afterBuildCleanup(executionFailure);
+            return executionFailure;
         } finally {
             finished();
         }
@@ -1059,8 +1136,20 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         }
     }
 
-    private void fireBeforeExecute() {
+    private void beforeBuildSetup() {
+        for (ExecutionResult result : results) {
+            result.assertResultVisited();
+        }
         beforeExecute.execute(this);
+        assertCanExecute();
+        assert !(usesSharedDaemons() && (args.contains("--stop") || tasks.contains("--stop"))) : "--stop cannot be used with daemons that are shared with other tests, since this will cause other tests to fail.";
+        collectStateBeforeExecution();
+    }
+
+    private void afterBuildCleanup(ExecutionResult result) {
+        afterExecute.execute(this);
+        results.add(result);
+        checkForDaemonCrashes(getWorkingDir(), it -> true);
     }
 
     protected GradleHandle createGradleHandle() {
@@ -1100,11 +1189,17 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
         return withArgument("--build-cache");
     }
 
+    @Override
+    public GradleExecuter withPartialVfsInvalidation(boolean enabled) {
+        return this;
+    }
+
     protected Action<ExecutionResult> getResultAssertion() {
         return new Action<ExecutionResult>() {
-            int expectedDeprecationWarnings = AbstractGradleExecuter.this.expectedDeprecationWarnings;
-            boolean expectStackTraces = !AbstractGradleExecuter.this.stackTraceChecksOn;
-            boolean checkDeprecations = AbstractGradleExecuter.this.checkDeprecations;
+            private int expectedGenericDeprecationWarnings = AbstractGradleExecuter.this.expectedGenericDeprecationWarnings;
+            private final List<String> expectedDeprecationWarnings = new ArrayList<>(AbstractGradleExecuter.this.expectedDeprecationWarnings);
+            private final boolean expectStackTraces = !AbstractGradleExecuter.this.stackTraceChecksOn;
+            private final boolean checkDeprecations = AbstractGradleExecuter.this.checkDeprecations;
 
             @Override
             public void execute(ExecutionResult executionResult) {
@@ -1113,7 +1208,7 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
                 boolean executionFailure = isExecutionFailure(executionResult);
 
                 // for tests using rich console standard out and error are combined in output of execution result
-                if (executionFailure && isErrorOutEmpty(error)) {
+                if (executionFailure) {
                     normalizedOutput = removeExceptionStackTraceForFailedExecution(normalizedOutput);
                 }
 
@@ -1125,8 +1220,14 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
                 validate(error, "Standard error");
 
-                if (expectedDeprecationWarnings > 0) {
-                    throw new AssertionError(String.format("Expected %d more deprecation warnings", expectedDeprecationWarnings));
+                if (!expectedDeprecationWarnings.isEmpty()) {
+                    throw new AssertionError(String.format("Expected the following deprecation warnings:%n%s",
+                        expectedDeprecationWarnings.stream()
+                            .map(warning -> " - " + warning)
+                            .collect(joining("\n"))));
+                }
+                if (expectedGenericDeprecationWarnings > 0) {
+                    throw new AssertionError(String.format("Expected %d more deprecation warnings", expectedGenericDeprecationWarnings));
                 }
             }
 
@@ -1157,45 +1258,58 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
                     throw new UncheckedIOException(e);
                 }
                 int i = 0;
+                boolean insideVariantDescriptionBlock = false;
+                boolean insideKotlinCompilerFlakyStacktrace = false;
                 while (i < lines.size()) {
                     String line = lines.get(i);
-                    if (line.matches(".*use(s)? or override(s)? a deprecated API\\.")) {
+                    if (insideVariantDescriptionBlock && line.contains("]")) {
+                        insideVariantDescriptionBlock = false;
+                    } else if (!insideVariantDescriptionBlock && line.contains("variant \"")) {
+                        insideVariantDescriptionBlock = true;
+                    }
+
+                    // https://youtrack.jetbrains.com/issue/KT-29546
+                    if (line.contains("Compilation with Kotlin compile daemon was not successful")) {
+                        insideKotlinCompilerFlakyStacktrace = true;
+                        i++;
+                    } else if (insideKotlinCompilerFlakyStacktrace &&
+                        (line.contains("java.rmi.UnmarshalException") || line.contains("java.io.EOFException"))) {
+                        i++;
+                        i = skipStackTrace(lines, i);
+                    } else if (line.matches(".*use(s)? or override(s)? a deprecated API\\.")) {
                         // A javac warning, ignore
                         i++;
-                    } else if (line.contains(UnsupportedJavaRuntimeException.JAVA7_DEPRECATION_WARNING)) {
-                        if (!java7DeprecationWarningShouldExist()) {
-                            throw new AssertionError(String.format("%s line %d contains unexpected deprecation warning: %s%n=====%n%s%n=====%n", displayName, i + 1, line, output));
-                        }
-                        // skip over stack trace
+                    } else if (line.matches(".*w: .* is deprecated\\..*")) {
+                        // A kotlinc warning, ignore
                         i++;
-                        while (i < lines.size() && STACK_TRACE_ELEMENT.matcher(lines.get(i)).matches()) {
-                            i++;
-                        }
-                    } else if (isJava7DeprecationTruncatedDaemonLog(lines, i, line)) {
-                        // skip over stack trace
-                        i++;
-                        while (i < lines.size() && STACK_TRACE_ELEMENT.matcher(lines.get(i)).matches()) {
-                            i++;
-                        }
                     } else if (isDeprecationMessageInHelpDescription(line)) {
                         i++;
+                    } else if (expectedDeprecationWarnings.remove(line)) {
+                        // Deprecation warning is expected
+                        i++;
+                        i = skipStackTrace(lines, i);
                     } else if (line.matches(".*\\s+deprecated.*")) {
-                        if (checkDeprecations && expectedDeprecationWarnings <= 0) {
+                        if (checkDeprecations && expectedGenericDeprecationWarnings <= 0) {
                             throw new AssertionError(String.format("%s line %d contains a deprecation warning: %s%n=====%n%s%n=====%n", displayName, i + 1, line, output));
                         }
-                        expectedDeprecationWarnings--;
+                        expectedGenericDeprecationWarnings--;
                         // skip over stack trace
                         i++;
-                        while (i < lines.size() && STACK_TRACE_ELEMENT.matcher(lines.get(i)).matches()) {
-                            i++;
-                        }
-                    } else if (!expectStackTraces && STACK_TRACE_ELEMENT.matcher(line).matches() && i < lines.size() - 1 && STACK_TRACE_ELEMENT.matcher(lines.get(i + 1)).matches()) {
+                        i = skipStackTrace(lines, i);
+                    } else if (!expectStackTraces && !insideVariantDescriptionBlock && STACK_TRACE_ELEMENT.matcher(line).matches() && i < lines.size() - 1 && STACK_TRACE_ELEMENT.matcher(lines.get(i + 1)).matches()) {
                         // 2 or more lines that look like stack trace elements
                         throw new AssertionError(String.format("%s line %d contains an unexpected stack trace: %s%n=====%n%s%n=====%n", displayName, i + 1, line, output));
                     } else {
                         i++;
                     }
                 }
+            }
+
+            private int skipStackTrace(List<String> lines, int i) {
+                while (i < lines.size() && STACK_TRACE_ELEMENT.matcher(lines.get(i)).matches()) {
+                    i++;
+                }
+                return i;
             }
 
             private boolean isDeprecationMessageInHelpDescription(String s) {
@@ -1211,15 +1325,32 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     @Override
     public GradleExecuter expectDeprecationWarnings(int count) {
-        Preconditions.checkState(expectedDeprecationWarnings == 0, "expected deprecation count is already set for this execution");
+        Preconditions.checkState(expectedGenericDeprecationWarnings == 0, "expected deprecation count is already set for this execution");
         Preconditions.checkArgument(count > 0, "expected deprecation count must be positive");
-        expectedDeprecationWarnings = count;
+        expectedGenericDeprecationWarnings = count;
         return this;
+    }
+
+    @Override
+    public GradleExecuter expectDeprecationWarning(String warning) {
+        expectedDeprecationWarnings.add(warning);
+        return this;
+    }
+
+    @Override
+    public GradleExecuter expectDocumentedDeprecationWarning(String warning) {
+        return expectDeprecationWarning(warning.replace("https://docs.gradle.org/current/", "https://docs.gradle.org/" + GradleVersion.current().getVersion() + "/"));
     }
 
     @Override
     public GradleExecuter noDeprecationChecks() {
         checkDeprecations = false;
+        return this;
+    }
+
+    @Override
+    public GradleExecuter noDaemonCrashChecks() {
+        checkDaemonCrash = false;
         return this;
     }
 
@@ -1247,16 +1378,6 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
 
     public boolean isAllowExtraLogging() {
         return allowExtraLogging;
-    }
-
-    public boolean isRequiresGradleDistribution() {
-        return requiresGradleDistribution;
-    }
-
-    @Override
-    public GradleExecuter requireGradleDistribution() {
-        this.requiresGradleDistribution = true;
-        return this;
     }
 
     @Override
@@ -1307,6 +1428,36 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     @Override
+    public GradleExecuter withFileLeakDetection(String... args) {
+        String leakDetectorUrl = "https://repo1.maven.org/maven2/org/kohsuke/file-leak-detector/1.13/file-leak-detector-1.13-jar-with-dependencies.jar";
+        this.beforeExecute(executer -> {
+            File leakDetectorJar = new File(this.gradleUserHomeDir, "file-leak-detector-1.13-jar-with-dependencies.jar");
+            if (!leakDetectorJar.exists()) {
+                // Need to download the jar
+                GFileUtils.parentMkdirs(leakDetectorJar);
+                GFileUtils.touch(leakDetectorJar);
+                try (OutputStream out = Files.newOutputStream(leakDetectorJar.toPath());
+                     InputStream in = new URL(leakDetectorUrl).openStream()) {
+                    ByteStreams.copy(in, out);
+                } catch (IOException e) {
+                    throw new RuntimeException("Couldn't download " + leakDetectorUrl, e);
+                }
+            }
+
+            String joinedArgs;
+            if (args.length == 0) {
+                // Default arguments to pass to the java agent
+                joinedArgs = "http=19999";
+            } else {
+                joinedArgs = Joiner.on(',').join(args);
+            }
+            withBuildJvmOpts("-javaagent:" + leakDetectorJar + "=" + joinedArgs);
+        });
+
+        return this;
+    }
+
+    @Override
     public boolean isDebug() {
         return debug;
     }
@@ -1317,14 +1468,34 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     protected static class GradleInvocation {
-        final Map<String, String> environmentVars = new HashMap<String, String>();
-        final List<String> args = new ArrayList<String>();
+        final Map<String, String> environmentVars = new HashMap<>();
+        final List<String> args = new ArrayList<>();
         // JVM args that must be used for the build JVM
-        final List<String> buildJvmArgs = new ArrayList<String>();
+        final List<String> buildJvmArgs = new ArrayList<>();
         // JVM args that must be used to fork a JVM
-        final List<String> launcherJvmArgs = new ArrayList<String>();
+        final List<String> launcherJvmArgs = new ArrayList<>();
         // Implicit JVM args that should be used to fork a JVM
-        final List<String> implicitLauncherJvmArgs = new ArrayList<String>();
+        final List<String> implicitLauncherJvmArgs = new ArrayList<>();
+
+        protected Map<String, String> getEnvironmentVars() {
+            return environmentVars;
+        }
+
+        protected List<String> getArgs() {
+            return args;
+        }
+
+        protected List<String> getBuildJvmArgs() {
+            return buildJvmArgs;
+        }
+
+        protected List<String> getLauncherJvmArgs() {
+            return launcherJvmArgs;
+        }
+
+        protected List<String> getImplicitLauncherJvmArgs() {
+            return implicitLauncherJvmArgs;
+        }
     }
 
     @Override
@@ -1355,49 +1526,95 @@ public abstract class AbstractGradleExecuter implements GradleExecuter {
     }
 
     private static LoggingServiceRegistry newCommandLineProcessLogging() {
-        LoggingServiceRegistry loggingServices = new LoggingServiceRegistry() {
-            @Override
-            protected OutputEventRenderer createOutputEventRenderer(Clock clock) {
-                return new VerboseAwareOutputEventRenderer(clock);
-            }
-        };
+        LoggingServiceRegistry loggingServices = LoggingServiceRegistry.newEmbeddableLogging();
         LoggingManagerInternal rootLoggingManager = loggingServices.get(DefaultLoggingManagerFactory.class).getRoot();
-        rootLoggingManager.captureSystemSources();
         rootLoggingManager.attachSystemOutAndErr();
         return loggingServices;
     }
 
-    private static class VerboseAwareOutputEventRenderer extends OutputEventRenderer {
-        VerboseAwareOutputEventRenderer(Clock clock) {
-            super(clock);
-        }
+    @Override
+    public GradleExecuter withTestConsoleAttached() {
+        return withTestConsoleAttached(ConsoleAttachment.ATTACHED);
+    }
 
-        @Override
-        public void attachAnsiConsole(OutputStream outputStream) {
-            if (outputStream instanceof VerboseAwareAnsiOutputStream) {
-                attachAnsiConsole(outputStream, VerboseAwareAnsiOutputStream.class.cast(outputStream).isVerbose());
-            } else {
-                super.attachAnsiConsole(outputStream);
-            }
+    @Override
+    public GradleExecuter withTestConsoleAttached(ConsoleAttachment consoleAttachment) {
+        this.consoleAttachment = consoleAttachment;
+        return configureConsoleCommandLineArgs();
+    }
+
+    protected GradleExecuter configureConsoleCommandLineArgs() {
+        if (consoleAttachment == ConsoleAttachment.NOT_ATTACHED) {
+            return this;
+        } else {
+            return withCommandLineGradleOpts(consoleAttachment.getConsoleMetaData().getCommandLineArgument());
         }
     }
 
-    protected static class VerboseAwareAnsiOutputStream extends OutputStream {
-        private final OutputStream delegate;
-        private boolean verbose;
+    private boolean errorsShouldAppearOnStdout() {
+        // If stdout and stderr are attached to the console
+        return consoleAttachment.isStderrAttached() && consoleAttachment.isStdoutAttached();
+    }
 
-        VerboseAwareAnsiOutputStream(OutputStream delegate, boolean verbose) {
+    private class ResultCollectingHandle implements GradleHandle {
+        private final GradleHandle delegate;
+
+        public ResultCollectingHandle(GradleHandle delegate) {
             this.delegate = delegate;
-            this.verbose = verbose;
-        }
-
-        public boolean isVerbose() {
-            return verbose;
         }
 
         @Override
-        public void write(int b) throws IOException {
-            delegate.write(b);
+        public PipedOutputStream getStdinPipe() {
+            return delegate.getStdinPipe();
+        }
+
+        @Override
+        public String getStandardOutput() {
+            return delegate.getStandardOutput();
+        }
+
+        @Override
+        public String getErrorOutput() {
+            return delegate.getErrorOutput();
+        }
+
+        @Override
+        public GradleHandle abort() {
+            return delegate.abort();
+        }
+
+        @Override
+        public GradleHandle cancel() {
+            return delegate.cancel();
+        }
+
+        @Override
+        public GradleHandle cancelWithEOT() {
+            return delegate.cancelWithEOT();
+        }
+
+        @Override
+        public ExecutionResult waitForFinish() {
+            ExecutionResult result = delegate.waitForFinish();
+            results.add(result);
+            return result;
+        }
+
+        @Override
+        public ExecutionFailure waitForFailure() {
+            ExecutionFailure failure = delegate.waitForFailure();
+            results.add(failure);
+            return failure;
+        }
+
+        @Override
+        public void waitForExit() {
+            delegate.waitForExit();
+        }
+
+        @Override
+        public boolean isRunning() {
+            return delegate.isRunning();
         }
     }
 }
